--- a/views/card.hbs
+++ b/views/card.hbs
@@ -1,28 +1,33 @@
-<h1>Card</h1>
+<h1>Cart</h1>
+<div id="card">
+    {{#if courses.length}}
+        <table>
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Count</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each courses}}
 
-{{#if courses.length}}
-<table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Count</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-    {{#each courses}}
+                <tr>
+                    <td>{{title}}</td>
+                    <td>{{count}}</td>
+                    <td>
+                        <button class="btn btn-small js-remove red" data-id="{{id}}">Delete</button>
+                    </td>
+                </tr>
+            {{/each}}
+            </tbody>
+        </table>
+        <p><strong>Price: </strong><span class="price">{{price}}</span></p>
 
-    <tr>
-        <td>{{title}}</td>
-        <td>{{count}}</td>
-        <td>
-            <button class="btn btn-small">Delete</button>
-        </td>
-    </tr>
-    {{/each}}
-    </tbody>
-</table>
-<p><strong>Price</strong><span class="price">{{price}}</span></p>
-{{else}}
-    <p>Card is empty</p>
-{{/if}}
+      <form action="orders" method="POST">
+        <button type="submit" class="btn">Order</button>
+      </form>
+    {{else}}
+        <p>Cart is empty</p>
+    {{/if}}
+</div>
