--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -15,22 +15,36 @@
         <li><a href="/courses">Courses</a></li>
         {{/if}}
 
-        {{#if isAdd}}
-        <li class="active"><a href="/add">Add course</a></li>
-        {{else}}
-        <li><a href="/add">Add course</a></li>
-        {{/if}}
+        {{#if isAuth}}
 
-        {{#if isCard}}
-        <li class="active"><a href="/card">Card</a></li>
-        {{else}}
-        <li><a href="/card">Card</a></li>
-        {{/if}}
+          {{#if isAdd}}
+              <li class="active"><a href="/add">Add course</a></li>
+          {{else}}
+              <li><a href="/add">Add course</a></li>
+          {{/if}}
 
-        {{#if isOrder}}
-        <li class="active"><a href="/orders">Orders</a></li>
+          {{#if isCard}}
+              <li class="active"><a href="/card">Card</a></li>
+          {{else}}
+              <li><a href="/card">Card</a></li>
+          {{/if}}
+
+          {{#if isOrder}}
+              <li class="active"><a href="/orders">Orders</a></li>
+          {{else}}
+              <li><a href="/orders">Orders</a></li>
+          {{/if}}
+
+          <li><a href="/auth/logout">Log out</a></li>
+
         {{else}}
-        <li><a href="/orders">Orders</a></li>
+
+          {{#if isLogin}}
+              <li class="active"><a href="/auth/login#login">Log in</a></li>
+          {{else}}
+              <li><a href="/auth/login#login">Log in</a></li>
+          {{/if}}
+
         {{/if}}
       </ul>
     </div>
