add isAuth check for edit/buy buttons

--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -14,11 +14,13 @@
             </div>
             <div class="card-action actions">
                 <a href="/courses/{{_id}}">Open course</a>
+              {{#if @root.isAuth}}
                 <a href="/courses/{{_id}}/edit?allow=true">Edit course</a>
                 <form action="/card/add" method="POST">
-                    <input type="hidden" name="id" value="{{_id}}">
-                    <button type="submit" class="btn btn-primary">Buy</button>
+                  <input type="hidden" name="id" value="{{_id}}">
+                  <button type="submit" class="btn btn-primary">Buy</button>
                 </form>
+              {{/if}}
             </div>
         </div>
     </div>
