--- a/public/index.css
+++ b/public/index.css
@@ -39,3 +39,11 @@
 .auth {
     padding-top: 1rem;
 }
+
+.alert {
+    padding-top: .5rem 1rem;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 1rem;
+    background:  rgba(255, 0, 0, 0.3);
+}
