add link for reset password

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -27,7 +27,7 @@
         </div>
 
         <input type="hidden" name="_csrf" value="{{csrf}}">
-
+        <p><a href="/auth/reset">Forgot password?</a></p>
         <button type="submit" class="btn btn-prymary">Submit</button>
       </form>
     </div>
