--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -39,7 +39,7 @@
       {{/if}}
 
       <h1>Create an account</h1>
-      <form action="/auth/register" method="POST">
+      <form action="/auth/register" method="POST" novalidate>
         <div class="input-field">
           <input id="remail" name="email" type="email" class="validate" required>
           <label for="remail">Email</label>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="input-field">
-          <input id="name" name="name" type="password" class="validate" required >
+          <input id="name" name="name" type="text" class="validate" required >
           <label for="name">Name</label>
           <span class="helper-text" data-error="type name"></span>
         </div>
