--- a/public/index.css
+++ b/public/index.css
@@ -41,9 +41,10 @@
 }
 
 .alert {
-    padding-top: .5rem 1rem;
+    padding: .5rem 1rem;
     border-radius: 10px;
     text-align: center;
     margin-bottom: 1rem;
     background:  rgba(255, 0, 0, 0.3);
+    white-space: pre-line;
 }
